Modified package.json and port

--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "siddharth rangnani",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+"scripts": {
+    "start": "node index.js",
+    "install": "npm install"
   },
   "dependencies": {
     "express": "^5.1.0",
