--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "type": "commonjs",
   "main": "index.js",
 "scripts": {
-    "start": "node index.js",
-    "install": "npm install"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^5.1.0",
